--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+         <title> Alex Binder - Product Designer </title>
         <link rel="stylesheet" href="Portfolio.css" >
         <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:500,700,700i|Open+Sans|Space+Mono" rel="stylesheet">
         <!---scaling code--->
@@ -20,7 +21,7 @@
 
             <h4> Case Studies </h4>
             <div class= "CaseFlex">
-              <a href="www.facebook.com">
+              <a href="PhysicalTherapy.html">
                 <div class="CaseStudyBlock" style="background-image:url('Images/PhysicalTherapyGraphic.png')">
                   <div class="CaseStudyTextBlock">
                     <h2> Physical Therapy Assistant</h2>
@@ -32,7 +33,7 @@
 
             </br>
 
-              <a href="www.facebook.com">
+              <a href="PhysicalTherapy.html">
                 <div class="CaseStudyBlock" style="background-image:url('Images/PhysicalTherapyGraphic.png')">
                   <div class="CaseStudyTextBlock">
                     <h2> Open Source Password Manager </h2>
