Title section for Case Study pages

--- a/PhysicalTherapy.html
+++ b/PhysicalTherapy.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-     <title> Alex Binder - Product Designer </title>
+     <title> Alex Binder - Product Designer - Phys.Assist </title>
     <link rel="stylesheet" href="CaseStudy.css" >
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:500,700,700i|Open+Sans|Space+Mono" rel="stylesheet">
     <!---scaling code--->
@@ -9,14 +9,17 @@
 </head>
 <body>
   <content class="animate-on-load">
+    <div class="appicon" style="background-image:url('Images/PhyiscalTherapyIcon.png')"></div>
 
 
+    <div class="contentblock">
+      <h1>Physical Therapy Assistant</h1>
+      <h4>iOS app - Interaction, Motion, UX Design</h4>
+      </br>
+      <p>I was approached by the Spectramed team to redesign their iOS companion app. The app connects to a bluetooth device that assists clinicians in conducting physical therapy on patients suffering from Dysphagia. </p>
 
+    </div>
 
-
-
-
-
-</content>
+  </content>
 </body>
 </html>
