--- a/PhysicalTherapy.html
+++ b/PhysicalTherapy.html
@@ -3,22 +3,121 @@
 <head>
      <title> Alex Binder - Product Designer - Phys.Assist </title>
     <link rel="stylesheet" href="CaseStudy.css" >
-    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:500,700,700i|Open+Sans|Space+Mono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:500,700,700i|Open+Sans:400,700|Space+Mono" rel="stylesheet">
     <!---scaling code--->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <content class="animate-on-load">
-    <div class="appicon" style="background-image:url('Images/PhyiscalTherapyIcon.png')"></div>
 
 
-    <div class="contentblock">
-      <h1>Physical Therapy Assistant</h1>
-      <h4>iOS app - Interaction, Motion, UX Design</h4>
-      </br>
-      <p>I was approached by the Spectramed team to redesign their iOS companion app. The app connects to a bluetooth device that assists clinicians in conducting physical therapy on patients suffering from Dysphagia. </p>
+      <div class="appicon" style="background-image:url('Images/PhyiscalTherapyIcon.png')"></div>
+
+
+      <div class="topcontentblock">
+        <h1>Physical Therapy Assistant</h1>
+        <h4>iOS app - Interaction, Motion, UX Design</h4>
+        </br>
+        <p>I was approached by the <a href="https://spectramedonline.com/"> Spectramed</a> team to redesign their iOS companion app. The app connects to a bluetooth device that assists clinicians in conducting physical therapy on patients suffering from Dysphagia. </p>
+      </div>
+
+      <div class="contentblock">
+
+        <div class="PhotoFlex">
+          <div class="PhotoBlock" style="background-image:url('Images/Throatillustration.png'); width:240px; height:240px;"></div>
+
+          <div class="PhotoBlock">
+            <a href="https://www.youtube.com/watch?v=3hDoLrOrotU">
+              <h2> Dysphagia</h2>
+              <h4> dys·pha·gia </h4>
+            </a>
+
+          <p> A medical condition that makes food and water difficult to swallow. This is typically due to major brain damage.</p>
+        </div>
+      </div>
 
     </div>
+
+    <div class="contentblock">
+      <img style="width:120px; height:inherit;" src="Images/ConnectingTheDots.svg">
+      <h2> Connecting the Dots</h2>
+      <h4> Task Analysis</h4>
+      <p>Typically, clinicians that use Aspire devices are contractual obligated to complete all of the tasks displayed below within a 45 minute session. In order to help us undertand how our product fits into their work flow I facilitated a stakeholder interviews to get a high level understanding of time on task breakdown for a full therapy session. The insights gained from this session helped inform how we approached redesigning the navigation.</p>
+      </br>
+      <h3>Full Therapy Session</h3>
+      <div class='stepper'>
+        <div class='StepActive'></div>
+        <div class='StepInactive'></div>
+      </div>
+      </br>
+      <h4 style="float:left;">15 Minutes</h4> <h4 style="float:left; margin-left:20%;">30 Minutes</h4>
+    </br>
+      <div class="PhotoFlex">
+        <div class="PhotoBlock">
+          <div class="StepActive" style="float:left; width:15px; height:15px; margin-right: 10px; "></div> <h4>USING ASPIRE</h4>
+          <ul>
+            <li>
+              <h5>Electric Stimulation Therapy</h5>
+            </li>
+            <li>
+              <h5>Muscle Assessments (once a week)</h5>
+            </li>
+            <li>
+              <h5>Phyiscal Therapy Exercises
+                (Aspire isn’t required)</h5>
+              </li>
+            </ul>
+          </div>
+
+          <div class="PhotoBlock">
+            <div class="StepInactive" style="float:left; width:15px; height:15px; margin-right: 10px; "></div> <h4>NOT USING ASPIRE</h4>
+
+            <ul>
+              <li>
+                <h5>Record Muscle Assessment Results</h5>
+              </li>
+              <li>
+                <h5>Record Excercise Results</h5>
+              </li>
+              <li>
+                <h5>Patient Education</h5>
+            </li>
+            <li>
+              <h5>Patient Consultation</h5>
+            </li>
+            <li>
+              <h5>Patient Reccomendations</h5>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+    </div>
+    <img src="Images/OriginalNav.png">
+    </br>
+    <h4 style="margin-left: auto; margin-right: auto; width: 90%;"> Wireframe of the Original Navigation Before the Redesign </h4>
+
+    <div class="contentblock">
+      <h2> The Crux of the Problem </h2>
+      <h4> Redesigning App Nav </h4>
+      <p>
+        With the insights gained from our stake holder interviews we realized the why the previous app was missing the mark.
+      </p>
+    </br>
+      <p>
+        The previous navigation pattern was negatively impacted usability. It used a hub style navigation model that shows the clinician everything at once. This created decision fatigue resulting in clinicians accidentally picking options that were out of the order they typically worked with patients.
+      </p>
+      <br/>
+      <p>
+        This lead to most clincians starting therapy sessions and entering arbitrary calbration numbers and using the device improperly.
+      </p>
+
+    </div>
+
+    <div class="contentblock">
+      <h2> The Solution </h2>
+    </div>
+
 
   </content>
 </body>
