--- a/PhysicalTherapy.html
+++ b/PhysicalTherapy.html
@@ -18,7 +18,7 @@
         <h1>Physical Therapy Assistant</h1>
         <h4>iOS app - Interaction, Motion, UX Design</h4>
         </br>
-        <p>I was approached by the <a href="https://spectramedonline.com/"> Spectramed</a> team to redesign their iOS companion app. The app connects to a bluetooth device that assists clinicians in conducting physical therapy on patients suffering from Dysphagia. </p>
+        <p>I had the pleasure of working with the <a href="https://spectramedonline.com/"> Spectramed</a> team as their lead product designer during the redesign of their iOS companion app. The app connects to a bluetooth device that assists clinicians in conducting physical therapy on patients suffering from Dysphagia. </p>
       </div>
 
       <div class="contentblock">
@@ -95,27 +95,42 @@
     </div>
     <img src="Images/OriginalNav.png">
     </br>
-    <h4 style="margin-left: auto; margin-right: auto; width: 90%;"> Wireframe of the Original Navigation Before the Redesign </h4>
+    <h4 style="margin-left: auto; margin-right: auto; width: 90%; text-align:center;"> A wireframe of the original navigation before the redesign. All available options are available on the home screen. </h4>
 
     <div class="contentblock">
       <h2> The Crux of the Problem </h2>
       <h4> Redesigning App Nav </h4>
       <p>
-        With the insights gained from our stake holder interviews we realized the why the previous app was missing the mark.
+        With the insights gained from our interviews we realized why the previous app was missing the mark.
       </p>
     </br>
       <p>
-        The previous navigation pattern was negatively impacted usability. It used a hub style navigation model that shows the clinician everything at once. This created decision fatigue resulting in clinicians accidentally picking options that were out of the order they typically worked with patients.
+        The previous navigation pattern was negatively impacted usability. It used a hub style navigation model that shows the clinician everything at once. This created decision fatigue resulting in clinicians picking options in an order that didn't align with how they work with their patients.
       </p>
       <br/>
       <p>
-        This lead to most clincians starting therapy sessions and entering arbitrary calbration numbers and using the device improperly.
+        This lead to most clincians starting therapy sessions, entering arbitrary calbration numbers and using the device improperly. Or even worst, abandoning the device all together half way through a session to finish the process manually.
       </p>
 
     </div>
 
     <div class="contentblock">
       <h2> The Solution </h2>
+
+      <h4> Guiding Clinicians with Progressive Disclosure Techniques </h4>
+      </div>
+
+      <h4 style="margin-left: auto; margin-right: auto; width: 90%; text-align:center;"> A wireframe of the redesigned navigation pattern. The left branch shows the automated calibration process. And the right side shows the manual process for expert clinicians. Read more below. </h4>
+      <img src="Images/NewNavWireframes.png">
+
+      <div class="contentblock">
+        <p>
+          To reduce ambiguity we emphasize what most clinicians should do when they start a therapy session, calibrate the device to the patients muscle strength. Once the clinician finishes the calibration process we use that data to set up a custom difficulty level for therapy games.
+        </p>
+        <br/>
+        <p>
+          To save time for other activities, some expert clincians log previous calibrations in a journal outside the app and enter calibrations manually when they begin the therapy session. The navigation pattern displayed above still supports this use case as well. These expert clinicians use the calibration tool as a bench mark for how well their patient is doing week over week. This weekly process is technically refered to as a trial. We renamed the calibration context to “Trials” to make the step more meaningful to clinicians.
+        </p>
     </div>
 
 
