--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="CaseStudyBlock" style="background-image:url('Images/PhysicalTherapyGraphic.png')">
                   <div class="CaseStudyTextBlock">
                     <h2> Physical Therapy Assistant</h2>
-                    <h4>iOS app - Interaction Design - </br> Motion Design</h4>
+                    <h4>iOS app - Interaction, Motion, UX Design</h4>
                   </div>
                 </div>
               </a>
