connected to dribbble

--- a/PhysicalTherapy.html
+++ b/PhysicalTherapy.html
@@ -133,6 +133,17 @@
         </p>
     </div>
 
+    <div class="contentblock">
+      <h2> High Fidelity UI </h2>
+      <h4> The Polish </h4>
+    </div>
+
+      <img src="https://cdn.dribbble.com/users/382033/screenshots/3765239/bluetoothonboarding.gif">
+      <h4 style="margin-left: auto; margin-right: auto; width: 90%; text-align:center;"> Implemented with <a href="https://airbnb.design/introducing-lottie/">Lottie for iOS</a></h4>
+      <div class="contentblock">
+        <p> When clinicians launch the app on their phone or tablet we attempt to pair with their Aspire device automatically.
+          If they have bluetooth disabled the app guides them to enable bluetooth. </p>
+      </div>
 
   </content>
 </body>
