--- a/PhysicalTherapy.html
+++ b/PhysicalTherapy.html
@@ -95,7 +95,10 @@
     </div>
     <img src="Images/OriginalNav.png">
     </br>
-    <h4 style="margin-left: auto; margin-right: auto; width: 90%; text-align:center;"> A wireframe of the original navigation before the redesign. All available options are available on the home screen. </h4>
+
+    <div class="caption">
+      <h4> A wireframe of the original navigation before the redesign. All available options are available on the home screen. </h4>
+    </div>
 
     <div class="contentblock">
       <h2> The Crux of the Problem </h2>
@@ -118,9 +121,9 @@
       <h2> The Solution </h2>
 
       <h4> Guiding Clinicians with Progressive Disclosure Techniques </h4>
-      </div>
+      <p> The wireframe below shows the redesigned navigation pattern. The left branch shows the automated calibration process. While the right side shows the manual process for expert clinicians. Read more below. </p>
+    </div>
 
-      <h4 style="margin-left: auto; margin-right: auto; width: 90%; text-align:center;"> A wireframe of the redesigned navigation pattern. The left branch shows the automated calibration process. And the right side shows the manual process for expert clinicians. Read more below. </h4>
       <img src="Images/NewNavWireframes.png">
 
       <div class="contentblock">
@@ -133,18 +136,47 @@
         </p>
     </div>
 
-    <div class="contentblock">
-      <h2> High Fidelity UI </h2>
-      <h4> The Polish </h4>
-    </div>
-
-      <img src="https://cdn.dribbble.com/users/382033/screenshots/3765239/bluetoothonboarding.gif">
-      <h4 style="margin-left: auto; margin-right: auto; width: 90%; text-align:center;"> Implemented with <a href="https://airbnb.design/introducing-lottie/">Lottie for iOS</a></h4>
       <div class="contentblock">
-        <p> When clinicians launch the app on their phone or tablet we attempt to pair with their Aspire device automatically.
-          If they have bluetooth disabled the app guides them to enable bluetooth. </p>
+        <h2>Trials Mode</h2>
+        <h4>Previously Calibration Mode</h4>
+        <p> Trials mode is designed to do two things. It provides some baseline information about the patient’s muscle strength for the clinician. It also calibrates a custom difficulty setting for physical therapy games. </p>
       </div>
 
+      <img src="Images/TrialsMode.png">
+
+      <div class="caption">
+        <h4> Clinicians can toggle between two different modes depending on their patient's coordination and strength"</h4>
+      </div>
+
+      <div class="contentblock">
+        <h3>Timed vs Self-Paced</h3>
+        <p>
+          There are two different trials modes designed to get the same kind of calibration info. Timed is the default mode. Over a 30 second period of time a patient’s swallowing strength is measured via the Aspire device and displayed on the iOS device.
+        </p>
+      </br>
+
+      </div>
+
+      <img src="https://cdn.dribbble.com/users/382033/screenshots/3826353/trials-mode.gif">
+
+
+      <!--
+          <div class="contentblock">
+            <h2> High Fidelity UI </h2>
+            <h4> The Polish </h4>
+          </div>
+
+            <img src="https://cdn.dribbble.com/users/382033/screenshots/3765239/bluetoothonboarding.gif">
+
+            <div class="caption">
+              <h4> Implemented with <a href="https://airbnb.design/introducing-lottie/">Lottie for iOS</a></h4>
+            </div>
+
+            <div class="contentblock">
+              <p> When clinicians launch the app on their phone or tablet we attempt to pair with their Aspire device automatically.
+                If they have bluetooth disabled the app guides them to enable bluetooth. </p>
+            </div>
+      -->
   </content>
 </body>
 </html>
