Added additional images and sections

--- a/PhysicalTherapy.html
+++ b/PhysicalTherapy.html
@@ -97,7 +97,7 @@
     </br>
 
     <div class="caption">
-      <h4> A wireframe of the original navigation before the redesign. All available options are available on the home screen. </h4>
+      <h4> A wireframe of the original navigation before the redesign. All options are available on the home screen. </h4>
     </div>
 
     <div class="contentblock">
@@ -154,12 +154,36 @@
           There are two different trials modes designed to get the same kind of calibration info. Timed is the default mode. Over a 30 second period of time a patient’s swallowing strength is measured via the Aspire device and displayed on the iOS device.
         </p>
       </br>
+        <p>
+          For the majority of patients, "Timed Mode" is meets their needs. However, the problem with "Timed Mode" is that it makes the assumption that all patients with dysphagia can swallow enough times (within 30 seconds) for the device to present relevant results. We introduced another mode called “Self-Paced” designed to let clinician and patient calibrate the device at their own pace.
+        </p>
+      </br>
 
       </div>
 
       <img src="https://cdn.dribbble.com/users/382033/screenshots/3826353/trials-mode.gif">
+      <div class="caption">
+        <h4> Animated transitions between the two Trials modes and the "start trials" interaction. Implemented with <a href="https://airbnb.design/introducing-lottie/">Lottie for iOS</a></h4>
+      </div>
 
+      </br>
+      </br>
+      </br>
+      </br>
+      <img src="Images/TrialsFlow.png">
+      <div class="caption">
+        <h4> Left: "Timed Trial" Flow / Right: "Self-Paced Trial" Flow </h4>
+      </div>
 
+      </br>
+      </br>
+      </br>
+      </br>
+
+      <img src="https://cdn.dribbble.com/users/382033/screenshots/3937445/results-transition.gif">
+      <div class="caption">
+        <h4> Transition from Trials Screen to an early version of the Results Screen. Implemented with <a href="https://airbnb.design/introducing-lottie/">Lottie for iOS</a> and standard iOS modal transition. </h4>
+      </div>
       <!--
           <div class="contentblock">
             <h2> High Fidelity UI </h2>
