--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
                   </div>
                 </div>
               </a>
-
+            </div>
+            <h4> More Case Studies Coming Soon </h4>
+          </div>
 
             </br>
 
+<!-- Add these when Case Studies are complete
               <a href="PhysicalTherapy.html">
                 <div class="CaseStudyBlock" style="background-image:url('Images/PhysicalTherapyGraphic.png')">
                   <div class="CaseStudyTextBlock">
@@ -52,8 +55,8 @@
                 </div>
               </a>
             </div>
-          </div>
 
+-->
         <div class= "contentblock">
           <h4> Words, Written & Spoken </h4>
 
