added embeded video

--- a/PhysicalTherapy.html
+++ b/PhysicalTherapy.html
@@ -172,7 +172,7 @@
       </br>
       <img src="Images/TrialsFlow.png">
       <div class="caption">
-        <h4> Left: "Timed Trial" Flow / Right: "Self-Paced Trial" Flow </h4>
+        <h4> Left: "Timed Trial" Flow </h4> <h4>Right: "Self-Paced Trial" Flow </h4>
       </div>
 
       </br>
@@ -233,7 +233,7 @@
 
           <div class="PhotoBlock">
             <h1 class="pattern">3</h1>
-            <p> Then hit the play button on said Aspire Device</p>
+            <p> Then hitting the play button on said Aspire Device</p>
           </div>
         </div>
 
@@ -302,7 +302,29 @@
 
   </div>
 
+  <div class="contentblock">
+    <h2> Physical Therapy Games</h2>
+    <p>
+      Once the app is calibrated the home screen presents the option to play games that can be controlled with the Aspire device. Currently there is only one game available but Spectramed has plans to add additional games in the future.
+    </p>
+  </div>
 
+  <img src="Images/HomeScreen.png">
+  <div class="caption">
+    <h4> Left: Default Home Screen.</h4>
+    <h4> Right: Home Screen after calibrating the app.</h4>
+  </div>
+
+</br>
+</br>
+</br>
+</br>
+
+  <div>
+    <div class="video-responsive">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/ZqLjMewDSeQ?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+  </div>
       <!--
           <div class="contentblock">
             <h2> High Fidelity UI </h2>
