--- a/PhysicalTherapy.html
+++ b/PhysicalTherapy.html
@@ -15,8 +15,8 @@
 
 
       <div class="topcontentblock">
-        <h1>Physical Therapy Assistant</h1>
-        <h4>iOS app - Interaction, Motion, UX Design</h4>
+        <h1 style="text-align:center;">Physical Therapy Assistant</h1>
+        <h4 style="text-align:center;">iOS app - Interaction, Motion, UX Design</h4>
         </br>
         <p>I had the pleasure of working with the <a href="https://spectramedonline.com/"> Spectramed</a> team as their lead product designer during the redesign of their iOS companion app. The app connects to a bluetooth device that assists clinicians in conducting physical therapy on patients suffering from Dysphagia. </p>
       </div>
@@ -325,6 +325,27 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/ZqLjMewDSeQ?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
   </div>
+  <div class="caption">
+    <h4> Playing the Therapy Game</h4>
+  </div>
+</br>
+</br>
+</br>
+</br>
+  <div class="contentblock">
+    <h2> Turning Clients into Game Designers </h2>
+    <h4> Keeping Clients Focused </h4>
+    <p>
+      When we first started working with the Spectramed team they were very enthusiastic about the opportunity to design games for their customers. They had a lot of great ideas. But to keep them focused I facilitated a workshop with their clinicians on staff and we talked about the goals clinicians have for their therapy patients. We were able to organize those goals into three buckets. This framework helped drive our decision for what games made the backlog verses the games that didn’t make the cut. So for example the paper plane game hit two out of three therapy goals so we launched with it.
+    </p>
+  </br>
+  </br>
+    <p>
+      Come back here for more updates if you liked what you saw. I will update this page with more of the games as we release.
+    </p>
+
+  </div>
+
       <!--
           <div class="contentblock">
             <h2> High Fidelity UI </h2>
