--- a/index.html
+++ b/index.html
@@ -16,24 +16,36 @@
             <p> I am a Designer and Researcher currently working on digital products for <a href="www.onshift.com">OnShift.</a> In my spare time I freelance as a Product Designer, 2D Animator and Communication Designer.</p>
           </div>
         </div>
+        <div style="background-color: fdfcf8;">
+        <div class="contentblock">
 
-        <div class= "contentblock">
+                    <h4> Case Studies </h4>
+                    <div class="CaseFlex">
+                      <a href="PhysicalTherapy.html">
+                        <div class="CaseStudyBlock" style="background-image:url('Images/PhysicalTherapyGraphic.png')">
+                          <div class="CaseStudyTextBlock">
+                            <h2> Physical Therapy Assistant</h2>
+                            <h4>iOS app - Interaction, Motion, UX Design</h4>
+                          </div>
+                        </div>
+                      </a>
 
-            <h4> Case Studies </h4>
-            <div class= "CaseFlex">
-              <a href="PhysicalTherapy.html">
-                <div class="CaseStudyBlock" style="background-image:url('Images/PhysicalTherapyGraphic.png')">
-                  <div class="CaseStudyTextBlock">
-                    <h2> Physical Therapy Assistant</h2>
-                    <h4>iOS app - Interaction, Motion, UX Design</h4>
+
+                        <div class="CaseStudyBlock" style="background-image:url('Images/ComingSoon.png'); opacity:.5;">
+                          <div class="CaseStudyTextBlock">
+                            <h2> More Case Studies Coming Soon </h2>
+                          </div>
+                        </div>
+
+
+
+                    </div>
                   </div>
-                </div>
-              </a>
-            </div>
-            <h4> More Case Studies Coming Soon </h4>
-          </div>
+        </div>
 
-            </br>
+      </div>
+
+
 
 <!-- Add these when Case Studies are complete
               <a href="PhysicalTherapy.html">
@@ -62,9 +74,9 @@
 
           <h3> <a href="https://revisionpath.com/alex-binder/">Revision Path Episode 239</a> </h3>
           </br>
-          <h3> <a href="https://medium.com/@alexbinder">A/B Testing  for SAAS Products</a> </h3>
+          <h3> <a href="https://medium.com/@alexbinder">The Essential A/B Test Checklist</a> </h3>
           </br>
-          <h3> <a href="www.facebook.com">Motion Collab - Principles of Animation</a> </h3>
+          <h3> <a href="https://www.facebook.com/photo.php?fbid=10210482607689174&set=g.166159267248146&type=1&theater&ifg=1">Motion Collab - Principles of Animation</a> </h3>
         </div>
 
 
